extracted progress counting to separate methods (IDEA-CR-16736)